# Anacleto

./: .gitignore  .gitignore.in  Common.mk  CommonLinux.mk  README.md  bootstrap  build_docker  local_config  local_docker
conf/linux/4.9.0/: red_pitaya.def
fpga/: Common.mk  FpgaCommon.am  heartbeat.dtsi  vivado_socdev_env.tcl  vivado_socdev_makeutils.tcl
fpga/dts/: READ.ME
projects/: .gitignore  configure.ac
projects/rp_trig/: Makefile.am  store.sh
projects/rp_trig/linux/: rptrig.h  rptrig_bin.c  usermem.h
projects/rp_trig/src/: component.xml  rp_trig.vhd  rp_trig_axi.vhd  rp_trig_prog.vhd  rp_trig_setup.tcl
projects/rp_trig/src_prj/: redpitaya.xdc  rp_trig_brd_setup.tcl  system.bd
projects/rp_trig/src_prj/hdl/: system.v  system_wrapper.v
projects/rp_trig2/: .gitignore  Makefile.am  deploy.sh  store.sh
projects/rp_trig2/deploy/: install  remove
projects/rp_trig2/doc/: timing-board.tex
projects/rp_trig2/fs/etc/systemd/system/: rptrig.service
projects/rp_trig2/linux/: rptrig.h  rptrig_bin.c  rptrig_lib.c
projects/rp_trig2/src/: rp_trig.vhd  rp_trig.xdc  rp_trig_axi.vhd  rp_trig_prog.vhd  rp_trig_setup.tcl
projects/rp_trig2/src_prj/: redpitaya.xdc  system.bd
projects/rp_trig2/src_prj/hdl/: system.v  system_wrapper.v
projects/user512/: .gitignore  Makefile.am  README.md
projects/user512/dts/: user512.dtsi
projects/user512/linux/: Kbuild.in  Makefile.am  user512.c  user512.h  user512_test.c
projects/usermem/: .gitignore  Makefile.am  README.md  deploy.sh
projects/usermem/dts/: dtraw.dts  usermem.dtsi
projects/usermem/linux/: Kbuild.in  Makefile.am  usermem.c  usermem.h  usermem_bin.c  usermem_test.c
projects/w7x_timing/: .gitignore  Makefile.am  deploy.sh  store.sh
projects/w7x_timing/doc/: timing-board.tex
projects/w7x_timing/fs/etc/modules-load.d/: usermem.conf
projects/w7x_timing/fs/etc/systemd/system/: rptrig.service
projects/w7x_timing/linux/: Makefile.am  rptiming  rptrig.h  rptrig_bin.c  rptrig_lib.c  user512.h
projects/w7x_timing/logic/vivado_src/: red_pitaya.tcl
projects/w7x_timing/logic/vivado_src/red_pitaya.srcs/sources_1/bd/system/: system.bd  system_2015.4.tcl
projects/w7x_timing/logic/vivado_src/red_pitaya.srcs/sources_1/bd/system/hdl/: system_wrapper.v
projects/w7x_timing/logic/w7x_timing_1.0/: component.xml
projects/w7x_timing/logic/w7x_timing_1.0/hdl/: w7x_timing.vhd  w7x_timing_v1_0.vhd
projects/w7x_timing/prj_src/: redpitaya.xdc  system.bd  w7x_timing_brd_setup.tcl
projects/w7x_timing/prj_src/hdl/: system.hwdef  system.v  system_wrapper.v
projects/w7x_timing/rp/: install.sh
projects/w7x_timing/rp/etc/systemd/system/: rptrig.service  rptrig_fpga.service  w7x_timing.service  w7x_timing_fpga.service
projects/w7x_timing/src/: W7XTIMING.py  component.xml  w7x_timing.h  w7x_timing.vhd  w7x_timing.xdc  w7x_timing_axi.vhd  w7x_timing_lib.c  w7x_timing_prog.vhd  w7x_timing_setup.tcl  w7x_timing_test.c  w7x_timing_v1_0.vhd
projects/w7x_timing/src_prj/: system.bd  w7x_timing_brd_setup.tcl
projects/w7x_timing/src_prj/hdl/: system.v  system_wrapper.v
projects/w7x_timing/tdi/: RPParams.fun  RPProg.fun
